fidoconfig 0.91
--------------

----- cvs ci ------
Thu Jan 20 15:10:29 NOVT 2000
max (patch from Serguei Revtov):
* fecf2fconf: added wthitespace before "-b msgbasetype"
* check second parameter in parseFileName
* carbonDelete don't movin' messages to BadArea now

----- cvs ci ------
Sun Jan 16 14:10:00 CET 2000
sms:
* added warning if dupeHistoryDir is not set
* added "-I../smapi" to husky.lnx

----- cvs ci ------
Mon Jan  3 17:45:54 NOVT 2000                                                   
max (patch from Kolya Nesterov):
* added carbonDelete token (this is really a twit feature)

----- cvs ci ------
Mon Dec 27 23:03:29 NOVT 1999                                                   
max:
* manual means mandatory

----- cvs ci ------
Sat Dec 25 19:27:26 NOVT 1999
max (patch from Kolya Nesterov):
* added memdup()

----- cvs ci ------
Sun Dec 19 22:33:07 CET 1999
mtt:
* fixed -b documentation bug

----- cvs ci ------
Sun Dec 12 22:36:57 CET 1999
mtt:
* added fconf2areabbs (hacked by Grischa Brockhaus)

----- cvs ci ------
Sat Dec 11 19:27:40 1999 
Georgi (patch from Nestyurkin Nikolay, 2:5020/3600):
* added token fileEchoFlavour (flavour for fileecho)
  Warning, please put this token in config, if you use htick!

----- cvs ci ------
Wed Dec  8 11:05:56 MET 1999 
mtt
* added new fidoInst script developed by Stefano Zano

----- cvs ci ------
Tue Dec  7 20:57:05 NOVT 1999
max:
* add token ignoreCapWord

----- cvs ci ------
Tue Nov 30 23:06:25 CET 1999
mtt:
* all areanames are now converted to lowercase during reading
	
----- cvs ci ------
Tue Nov 30 22:07:07 CET 1999
sms:
* fixed some misuses of ++ in fecfg2fconf.c

----- cvs ci ------
Mon Nov 29 01:01:03 CET 1999
sms:
* another bugfix for string2addr: missing backslash before 0

----- cvs ci ------
Mon Nov 29 00:29:07 CET 1999
sms:
* fixed some misuses of ++ in common.c

----- cvs ci ------
Thu Nov  4 23:10:31 NOVT 1999
max:
* moved patimat() to common.c

----- cvs ci ------
Thu Oct 28 13:09:52 CEST 1999 
mtt: