@@ -243,8 +243,8 @@ void carbonNames2Addr(s_fidoconfig *config)
 
            }
 
-           if (cb->areaName && !found) {
-	      if (!cb->extspawn)
+           if (!found) {
+	      if ((cb->move != 2) && !cb->extspawn) // move==2 - delete
 	              printf("Could not find area \"%s\" for carbon copy. Use BadArea\n", (config->carbons[i].areaName) ? config->carbons[i].areaName : "");
               config->carbons[i].area = &(config->badArea);
               config->carbons[i].export = 0;
